--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "emoji-picker-react": "^4.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.0",
+    "socket.io-client": "^4.7.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
