--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "chatapp": "file:..",
     "emoji-picker-react": "^4.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
